--- a/index.html
+++ b/index.html
@@ -14,16 +14,13 @@
 </head>
 
 <body>
-    <header>
-        <ul class="nav nav-tabs">
+    <header style="margin-bottom:100px;">
+        <ul class="nav nav-tabs justify-content-center">
             <li class="nav-item">
-                <a class="nav-link active" href="#">Active</a>
+                <a class="nav-link save"  style="margin-right:50px;" href="#">Save</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link resume"  style="margin-left:50px;" href="#">Resume</a>
             </li>
         </ul>
     </header>
@@ -77,11 +74,13 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title font-title" id="playerModalLabel">Player</h5>
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-secondary closeScore" data-dismiss="modal">Close</button>
                     </div>
                     <div class="storage modal-body font-text">
                         <!-- <p>{{{this.content}}}</p> -->
-                        <p>testing</p>
+                        <h1 class="scoreInput" style="text-align: center;">
+                            0
+                        </h1>
 
                     </div>
                 </div>
