--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
                 <a class="nav-link save"  style="margin-right:50px;" href="#">Save</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link restart"  style="margin-left:50px;" href="#">Restart</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link resume"  style="margin-left:50px;" href="#">Resume</a>
             </li>
         </ul>
     </header>
     <main>
-        <div class="container">
+        <div class="container1">
             <div class="row first">
                 <div class="col-sm">
                     <div class="card">
