--- a/index.html
+++ b/index.html
@@ -15,19 +15,26 @@
 </head>
 
 <body>
-    <header style="margin-bottom:100px;">
-        <ul class="nav nav-tabs nav-light bg-dark justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link save" style="margin-right:50px;" href="#">Save</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link restart" style="margin-left:50px;" href="#">Restart</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link resume" style="margin-left:50px;" href="#">Resume</a>
-            </li>
-        </ul>
-    </header>
+    <nav class="navbar navbar-expand-sm  navTitle bg-dark" style="margin-bottom:100px;">
+        <a class="navbar-brand">Score Tracker</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link save navbtn" href="#">Save</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link restart navbtn" href="#">Restart</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link resume navbtn" href="#">Resume</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <main>
         <div class="container1">
             <div class="row first">
@@ -81,18 +88,20 @@
                     </div>
                     <div class="storage modal-body font-text">
                         <!-- <form class="playerName"> -->
-                            <div class="mb-3">
-                                <label for="playerName" class="form-label">Player Name</label>
-                                <input type="name" class="form-control" id="playerName" placeholder="">
-                            </div>
-                            <button type="button" class="btn btn-primary mb-3 playerNameSubmit" data-dismiss="modal">Submit</button>
+                        <div class="mb-3">
+                            <label for="playerName" class="form-label">Player Name</label>
+                            <input type="name" class="form-control" id="playerName" placeholder="">
+                        </div>
+                        <button type="button" class="btn btn-primary mb-3 playerNameSubmit"
+                            data-dismiss="modal">Submit</button>
                         <!-- </form> -->
                     </div>
                 </div>
             </div>
         </div>
     </main>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
